samples/_failures_safe/1761160747_90ae81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47135bf8.c: In function ‘main’:
./samples/SAFE/__tmp_47135bf8.c:148:9: error: expected declaration or statement at end of input
  148 |         case COMP_RLE:
      |         ^~~~
./samples/SAFE/__tmp_47135bf8.c:148:9: error: expected declaration or statement at end of input
